--- a/MyCompany/site/Views/Contact.cshtml
+++ b/MyCompany/site/Views/Contact.cshtml
@@ -17,7 +17,7 @@
                             style="border:0"></iframe>
 
                     <address class="text_6 color_10">
-                        <p class="text_8 color_6">4114 Nicoles Ln.  Grovetown, GA  30813</p>
+                        <p class="text_8 color_6">123 Your Street.  Beverly Hills, GA  90210</p>
                         <dl>
                             <dt>Telephone:</dt>
                             <dd>+1 937 582 6692</dd>
