--- a/MyCompany/site/Views/Shared/_Layout.cshtml
+++ b/MyCompany/site/Views/Shared/_Layout.cshtml
@@ -5,28 +5,12 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    @*<link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/camera.css" />
-        <link rel="stylesheet" href="css/style.css">
-        <script src="js/jquery.js"></script>
-        <script src="js/jquery-migrate-1.2.1.js"></script>
-        <script src="js/jquery.equalheights.js"></script>
-        <script src="js/camera.js"></script>
-        [if (gt IE 9)|!(IE)]><!
-        <script src="js/jquery.mobile.customized.min.js"></script>
-        <script src="js/wow/wow.js"></script>*@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/camera")
     @Scripts.Render("~/bundles/wow")
-    <script>
-        $(document).ready(function () {
-            if ($('html').hasClass('desktop')) {
-                new WOW().init();
-            }
-        });
-    </script>
-    <!--<![endif]-->
+
+
     <!--[if lt IE 9]>
     <div style=' clear: both; text-align:center; position: relative; background: #fff;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
@@ -160,8 +144,8 @@
                 <div class="row">
                     <div class="grid_12">
                         <div class="info text_11">
-                            <a href="./">Software©</a> 2014. <a href="index-5.html">Privacy Policy</a>
-                            More <a rel="nofollow" href="http://www.templatemonster.com/category/software-company-website-templates/" target="_blank">Software Company Website Templates at TemplateMonster.com</a>
+                            <a href="./">Matthew Harper©</a> 2015. <a href="/Company/Privacy">Privacy Policy</a>
+                            
                         </div>
                     </div>
                 </div>
