--- a/MyCompany/site/css/camera.css
+++ b/MyCompany/site/css/camera.css
@@ -92,8 +92,8 @@
   text-decoration: none;
 }
 .camera_loader {
-  background: #ffffff url(../images/camera-loader.gif) no-repeat center;
-  background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
+  background: #ffffff url(/images/camera-loader.gif) no-repeat center;
+  background: rgba(255, 255, 255, 0.9) url(/images/camera-loader.gif) no-repeat center;
   border: 1px solid #ffffff;
   -webkit-border-radius: 18px;
   -moz-border-radius: 18px;
