--- a/MyCompany/site/Views/News.cshtml
+++ b/MyCompany/site/Views/News.cshtml
@@ -115,7 +115,7 @@
 
                     <div class="box_11">
                         <div class="put-left">
-                            <img src="images/index-3_img01.jpg" alt="Image 1" />
+                            <img src="/images/index-3_img01.jpg" alt="Image 1" />
                         </div>
                         <div class="caption">
                             <h3 class="text_8 color_6">
@@ -136,7 +136,7 @@
                     </div>
                     <div class="box_11">
                         <div class="put-left">
-                            <img src="images/index-3_img02.jpg" alt="Image 2" />
+                            <img src="/images/index-3_img02.jpg" alt="Image 2" />
                         </div>
                         <div class="caption">
                             <h3 class="text_8 color_6">
@@ -157,7 +157,7 @@
                     </div>
                     <div class="box_11 last">
                         <div class="put-left">
-                            <img src="images/index-3_img03.jpg" alt="Image 3" />
+                            <img src="/images/index-3_img03.jpg" alt="Image 3" />
                         </div>
                         <div class="caption">
                             <h3 class="text_8 color_6">
