--- a/MyCompany/site/Views/CompanyHome.cshtml
+++ b/MyCompany/site/Views/CompanyHome.cshtml
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="row">
             <div class="grid_12 wow fadeInLeft">
-                <h2 class="header_2 text_7 color_6">Latest News</h2>
+                <h2 class="header_2 text_7 color_6">Our Philosophy</h2>
             </div>
         </div>
         <div class="row">
@@ -90,13 +90,11 @@
                     </div>
                     <div class="inner">
                         <h3 class="text_8 color_6">
-                            <a href="#">Lorem ipsum set sdolor sit amet conse ctetur.</a>
+                            <a href="#">Listen First!</a>
                         </h3>
 
                         <p class="text_6 color_10">
-                            Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eius- <br />
-                            mod tempor incididunt ut labore <br />
-                            et dolore magna aliqua.
+                            It is not a name.  It is not a motto.  It is what we do.  And we have been doing it for years.  Why is this important?
                         </p>
 
                         <a class="btn_2 text_3 color_7" href="#">Read more</a>
@@ -111,13 +109,11 @@
                     <div class="bg_image_1 maxheight2"></div>
                     <div class="inner">
                         <h3 class="text_8 color_8">
-                            <a href="#">Voluptate velit esse cillum dolore eu fugiat nulla pariatur</a>
+                            <a href="#">Any device.  <br />Any data.  <br />Any time.</a>
                         </h3>
 
                         <p class="text_6 color_8">
-                            Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eius- <br />
-                            mod tempor incididunt ut labore <br />
-                            et dolore magna aliqua.
+                            This is what we do.  <br />Technology has finally<br />gotten to the point this <br />is reality.
                         </p>
 
                         <a class="btn_2 text_3 color_8" href="#">
@@ -132,33 +128,26 @@
                 <div class="box_2 bg_3 maxheight1 last-row">
                     <h3 class="text_8 color_8">
                         <a href="#">
-                            Excepteur sint oc- <br />
-                            caecat cupidatat non proiden
+                            Who are we?
                         </a>
                     </h3>
 
                     <p class="text_6 color_8">
-                        Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eius- <br />
-                        mod tempor incididunt ut labore <br />
-                        et dolore magna aliqua.
+                        We are the same caliber of people that walk in the door any time you hire one of the big, well-known, and expensive IT consulting companies.<br />
+                        We have been doing it for them for years.  Now we are doing it for ourselves.  
                     </p>
-
-                    <a class="btn_2 text_3 color_8" href="#">Read more</a>
                 </div>
             </div>
             <div class="grid_3 md_grid_6  wow fadeInLeft">
                 <div class="box_2 bg_2 maxheight1 last-row">
                     <h3 class="text_8 color_8">
-                        <a href="#">Sunt in culpa qui officia deserunt mollit</a>
+                        <a href="#">Areas of Specialty</a>
                     </h3>
 
                     <p class="text_6 color_8">
-                        Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eius- <br />
-                        mod tempor incididunt ut labore <br />
-                        et dolore magna aliqua.
+                        Our backgrounds are as technically diverse as our customers.  The tools and platforms we recommend purely depend on your unique situation. We specialize in
+                        using technology to solve business problems.
                     </p>
-
-                    <a class="btn_2 text_3 color_8" href="#">Read more</a>
                 </div>
             </div>
             <div class="grid_6  wow fadeInRight">
@@ -166,13 +155,12 @@
                     <div class="put-right"><img src="images/solutions3.jpg" alt="Image 3" /></div>
                     <div class="inner  maxheight1 ">
                         <h3 class="text_8 color_8">
-                            <a href="#">Velit esse cillum dolore eu fugiat nulla pariatur</a>
+                            <a href="#">Listen  First.<br /> Solution Last.</a>
                         </h3>
 
                         <p class="text_6 color_8">
-                            Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eius- <br />
-                            mod tempor incididunt ut labore <br />
-                            et dolore magna aliqua.
+                            While it is true that you can build a puzzle without seeing the picture on the box, why would you try?
+                            <br />Listen First.  <br />Save time and money.
                         </p>
 
                         <a class="btn_2 text_3 color_8" href="#">Read more</a>
@@ -190,19 +178,15 @@
                 <div class="wrapper_1">
                     <div class="box_3 last-row">
                         <h3 class="text_8 color_1">
-                            Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+                            ListenFirst Solutions is a full service software consulting company owned and operated by software developers who are passionate about using the latestest
+                            technology to deliver practical yet sophisticated solutions to our clients.
                         </h3>
 
                         <p class="text_6 color_10">
-                            Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercita- <br />
-                            tion ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur <br />
-                            sint occaecat cupidatat non proident, sunt in culpa qui officia
+                            We operate our company much like a law firm. All of our software engineers are true professionals in every sense of the word, and they are personally 
+                            accountable to you as our customer.  We have no inerest in "padding" head counts to increase profits.  We have no interest in selling you a one-size fits 
+                            all team, technology, or methodology.  The reality is that there is no such thing.  Each client and engagement presents its own unique set of challenges that must 
+                            learned and adapted to.  We don't want your first project.  We want your second one.
                         </p>
 
                         <a class="btn_2 text_3 color_7" href="#">Read more</a>
