--- a/MyCompany/site/Views/About.cshtml
+++ b/MyCompany/site/Views/About.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@inherits System.Web.Mvc.WebViewPage
+@{
     
 }
 
@@ -15,7 +16,7 @@
 <!--========================================================
                           CONTENT
 =========================================================-->
-<section id="content" ng-controller="corpHome">
+<section id="content" ng-controller="aboutCtrl">
     <span>{{mattFoo}}</span>
     <div class="container">
         <div class="row">
@@ -29,7 +30,7 @@
                     <div class="box_5">
                         <div class="icon bg_3 color_8"><span>1</span></div>
                         <h3 class="text_8 color_1">
-                            Lore ipsu dolor
+                            Engage.
                         </h3>
 
                         <p class="text_6 color_10">
@@ -43,7 +44,7 @@
                     <div class="box_5">
                         <div class="icon bg_4 color_8"><span>2</span></div>
                         <h3 class="text_8 color_1">
-                            Lore ipsu dolor
+                            Listen.
                         </h3>
 
                         <p class="text_6 color_10">
@@ -57,7 +58,7 @@
                     <div class="box_5">
                         <div class="icon bg_2 color_8"><span>3</span></div>
                         <h3 class="text_8 color_1">
-                            Lore ipsu dolor
+                            Propose.
                         </h3>
 
                         <p class="text_6 color_10">
@@ -71,7 +72,7 @@
                     <div class="box_5">
                         <div class="icon bg_6 color_8"><span>4</span></div>
                         <h3 class="text_8 color_1">
-                            Lore ipsu dolor
+                            Deliver.
                         </h3>
 
                         <p class="text_6 color_10">
