Checking in forums work.  Need to fix top-level menus next.

--- a/MyCompany/site/Views/Shared/_Layout.cshtml
+++ b/MyCompany/site/Views/Shared/_Layout.cshtml
@@ -140,7 +140,7 @@
                 <div class="row">
                     <div class="grid_12">
                         <div class="info text_11">
-                            <a href="./">Matthew Harper©</a> 2015. <a href="/Company/Privacy">Privacy Policy</a>
+                            <a href="./Account/Login/?returnURL=%2Fforum%2Fforum.aspx">Matthew Harper©</a> 2015. <a href="/Company/Privacy">Privacy Policy</a>
                             
                         </div>
                     </div>
